--- a/index.html
+++ b/index.html
@@ -39,4 +39,14 @@
           <li class="nav-item active">
             <a href="#featured" class="nav-link">Featured</a>
           </li>
+          <li class="nav-item active">
+            <a href="#services" class="nav-link">Services</a>
+          </li>
+          <li class="nav-item active">
+            <a href="#gallery" class="nav-link">Gallery</a>
+          </li>
+          <li class="nav-item active">
+            <a href="#tour" class="nav-link">Tour</a>
+          </li>
+        </ul>
          
