Completed Navigation Bar

--- a/index.html
+++ b/index.html
@@ -49,4 +49,15 @@
             <a href="#tour" class="nav-link">Tour</a>
           </li>
         </ul>
+        <div class="d-none d-lg-flex align-items-baseline">
+          <!-- <p class="text-white">
+            <span class="mx-2 phone-icon">
+              <i class="fas fa fa-phone fa-fw"></i>
+            </span>
+            +987456123
+          </p> -->
+          <button class="btn green-btn text-capitalize">Developers</button>
+        </div>
+      </div>
+    </div>
          
