Added Color Changing Functionality

--- a/index.html
+++ b/index.html
@@ -60,4 +60,24 @@
         </div>
       </div>
     </div>
+    <!-- !Main Part -->
+    <div class="container">
+      <div class="row">
+        <!-- !Colour Changing Part -->
+        <div
+          class="col-11 col-sm-11 col-md-11 col-lg-6 prod-image colorizing-wrapper d-flex align-items-center"
+        >
+          <input
+            type="color"
+            value="#0000ff"
+            class="colorizing-wrapper__input"
+          />
+          <img
+            src="img3.jpg"
+            alt=""
+            class="colorizing-wrapper__img"
+            width="90px"
+            height="400px"
+          />
+        </div>
          
