Updated details part

--- a/index.html
+++ b/index.html
@@ -80,4 +80,23 @@
             height="400px"
           />
         </div>
-         
+         <div class="col-11 col-sm-11 col-md-11 col-lg-6 info">
+          <p class="new_arriv text-center">NEW</p>
+
+          <h2>Men's T Shirts V Neck Blue Color</h2>
+
+          <h6 class="pad">
+            By clicking an image a color selector will appear and you can change
+            image's color.
+          </h6>
+
+          <p class="pad">Product Code:ISRC456169</p>
+          <!-- <img src="img3.jpg" class="stars" alt="" width="25" height="30" /> -->
+          <h3 class="price"><b>Price: ₹ 280</b></h3>
+
+          <p class="pad"><b>Availibility: </b>Hurry Up! Last 2 item LEFT</p>
+
+          <p class="pad"><b>Brand:</b>Nike</p>
+
+          <p class="pad"><b>Payment:</b>COD available</p>
+        </div>
