Updated  index.html

--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script>(function(w, d) { w.CollectId = "601eeee68255d2479d7335c5"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
+    <script>
+      (function (w, d) {
+        w.CollectId = "601eeee68255d2479d7335c5";
+        var h = d.head || d.getElementsByTagName("head")[0];
+        var s = d.createElement("script");
+        s.setAttribute("type", "text/javascript");
+        s.async = true;
+        s.setAttribute("src", "https://collectcdn.com/launcher.js");
+        h.appendChild(s);
+      })(window, document);
+    </script>
   </head>
 
   <body>
     <!-- !Navbar -->
 
-    
-
     <div class="navbar navbar-expand-lg navbar-dark px-5">
-      <a href="#home" class="navbar-brand">Electrothon</a>
+      <a href="#home" class="navbar-brand">B2<span class="me">Me</span></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -57,7 +65,9 @@
             </span>
             +987456123
           </p> -->
-          <button class="btn green-btn text-capitalize">Developers</button>
+          <a href="home.html"
+            ><button class="btn green-btn text-capitalize">Developer</button></a
+          >
         </div>
       </div>
     </div>
@@ -74,14 +84,14 @@
             class="colorizing-wrapper__input"
           />
           <img
-            src="img3.jpg"
+            src="img3.jpeg"
             alt=""
             class="colorizing-wrapper__img"
             width="90px"
             height="400px"
           />
         </div>
-         <div class="col-11 col-sm-11 col-md-11 col-lg-6 info">
+        <div class="col-11 col-sm-11 col-md-11 col-lg-6 info">
           <p class="new_arriv text-center">NEW</p>
 
           <h2>Men's T Shirts V Neck Blue Color</h2>
@@ -101,9 +111,9 @@
 
           <p class="pad"><b>Payment:</b>COD available</p>
         </div>
-        </div>
+      </div>
     </div>
-  
+
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
