Index.html debug

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             class="colorizing-wrapper__input"
           />
           <img
-            src="img3.jpeg"
+            src="img3.jpg"
             alt=""
             class="colorizing-wrapper__img"
             width="90px"
