💚 Updated UI UX

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         <div class="profile">
           <img src="img3.png" class="profile-img" />
 
-          <h3 class="user-name">Chetas Shree .M</h3>
+          <h3 class="user-name">Chetas Shree M.</h3>
           <h5>Member</h5>
         </div>
         <div class="profile">
